<resources>
    <string name="app_name">atividade2</string>
    <string name="adicione_o_id">Adicione o id</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="lista_de_carros">Lista de carros</string>
    <string name="editar">Editar</string>
    <string name="adicionar">Adicionar</string>
    <string name="cancelar">Cancelar</string>
    <string name="confirmar">Confirmar</string>
    <string name="pre_o">Preço:</string>
    <string name="modelo">Modelo:</string>
    <string name="marca">Marca:</string>
</resources>